addons/argocd/settings/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
spec:
  ingressClassName: internal-nginx-controller
  rules:
  - host: argocd.sandman01.k8s.local
    http:
      paths:
      #- backend:
      #    service:
      #      name: argocd-server
      #      port:
      #        name: http
      #  path: /api/dex/callback
      #  pathType: Prefix
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
